--- a/chatbotproject/requirements.txt
+++ b/chatbotproject/requirements.txt
@@ -147,6 +147,7 @@ pypiwin32==223
 PyRect==0.2.0
 PyScreeze==1.0.1
 pytesseract==0.3.13
+python==3.12.5
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
